codex-rs/core/tests/suite/snapshots/all__suite__pending_input__pending_input_user_input_no_preempt_after_reasoning.snap
---
source: core/tests/suite/pending_input.rs
expression: snapshot
---
Scenario: /responses POST bodies with pending input

## Window 1
-- request 1 (request; First request) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first prompt
-- request 2 (request; Second request) --
04:reasoning:summary=thinking:encrypted=true
05:function_call/shell:{"command":"echo preserved tool call"}
06:message/assistant:
    first answer
07:function_call_output:unsupported call: shell
08:message/user:
    second prompt
